--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -319,6 +319,14 @@
   <ItemGroup>
     <Resource Include="Resources\Images\Link48x48.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\arrowRight24x24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\CommissionConclusion.png" />
+    <Resource Include="Resources\Images\CommissionConduct.png" />
+    <Resource Include="Resources\Images\CommissionPreliminary.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
