--- a/CommissionsModule/CommissionsModule.csproj
+++ b/CommissionsModule/CommissionsModule.csproj
@@ -106,6 +106,7 @@
     <Compile Include="ViewModels\Protocols\CommissionСonclusionViewModel.cs" />
     <Compile Include="ViewModels\Protocols\CommissionСonductViewModel.cs" />
     <Compile Include="ViewModels\Protocols\DelegateCommand.cs" />
+    <Compile Include="ViewModels\Protocols\EditorCommissionMembersViewModel.cs" />
     <Compile Include="ViewModels\Protocols\PreliminaryProtocolViewModel.cs" />
     <Compile Include="Views\Decisions\CommissionDecisionEditorView.xaml.cs">
       <DependentUpon>CommissionDecisionEditorView.xaml</DependentUpon>
@@ -199,6 +200,10 @@
     <Page Include="Views\Protocols\CommissionСonductView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Protocols\EditorCommissionMembersView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Protocols\PreliminaryProtocolView.xaml">
       <Generator>MSBuild:Compile</Generator>
