--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -330,6 +330,10 @@
   <ItemGroup>
     <Resource Include="Resources\Images\CommissionAdd.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\AllMembers.png" />
+    <Resource Include="Resources\Images\AnyMember.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
