--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -320,7 +320,7 @@
     <Resource Include="Resources\Images\Link48x48.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\arrowRight24x24.png" />
+    <Resource Include="Resources\Images\ArrowRight24x24.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\CommissionConclusion.png" />
@@ -333,6 +333,10 @@
   <ItemGroup>
     <Resource Include="Resources\Images\AllMembers.png" />
     <Resource Include="Resources\Images\AnyMember.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\ArrowDown24x24.png" />
+    <Resource Include="Resources\Images\ArrowUp24x24.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
