--- a/PatientInfoModule/PatientInfoModule.csproj
+++ b/PatientInfoModule/PatientInfoModule.csproj
@@ -236,6 +236,10 @@
       <Project>{304F5AEB-4189-4C9F-96DA-C32E57E5E1BE}</Project>
       <Name>Core.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Core.Reports\Core.Reports.csproj">
+      <Project>{59668b9b-3ebe-4524-92ef-043fa2c9c898}</Project>
+      <Name>Core.Reports</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Core.Wpf\Core.Wpf.csproj">
       <Project>{62515044-F9C0-4D93-8B55-1407CCF8D3F2}</Project>
       <Name>Core.Wpf</Name>
