--- a/CommissionsModule/CommissionsModule.csproj
+++ b/CommissionsModule/CommissionsModule.csproj
@@ -159,6 +159,10 @@
       <Project>{ed2fcb8b-db03-4ff8-934d-84eb934f97e6}</Project>
       <Name>Core.Notification</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Core.Reports\Core.Reports.csproj">
+      <Project>{59668b9b-3ebe-4524-92ef-043fa2c9c898}</Project>
+      <Name>Core.Reports</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Core.Wpf\Core.Wpf.csproj">
       <Project>{62515044-f9c0-4d93-8b55-1407ccf8d3f2}</Project>
       <Name>Core.Wpf</Name>
