--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -360,6 +360,11 @@
   <ItemGroup>
     <Resource Include="Resources\Images\SearchMan48x48.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\AssignmentPrint48x48.png" />
+    <Resource Include="Resources\Images\RecordPrint48x48.png" />
+    <Resource Include="Resources\Images\VisitPrint48x48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
