--- a/ScheduleModule/ScheduleModule.csproj
+++ b/ScheduleModule/ScheduleModule.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\ScheduleService.cs" />
     <Compile Include="Services\Interfaces\IScheduleService.cs" />
+    <Compile Include="ViewModels\DateTimeSelectionDialogViewModel.cs" />
     <Compile Include="ViewModels\ScheduleHeaderViewModel.cs" />
     <Compile Include="ViewModels\OverlayAssignmentCollectionViewModel.cs" />
     <Compile Include="ViewModels\OverlayAssignmentViewModel.cs" />
@@ -190,6 +191,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\FreeTimeSlotView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\DateTimeSelectionDialogView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
