--- a/Core.Wpf/packages.config
+++ b/Core.Wpf/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="ControlzEx" version="2.0.1.61" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net45" />
-  <package id="Fluent.Ribbon" version="3.6.1.236" targetFramework="net45" />
+  <package id="Fluent.Ribbon" version="4.0.3.394" targetFramework="net45" />
   <package id="Prism.Core" version="6.1.0" targetFramework="net45" />
   <package id="Prism.Wpf" version="6.1.0" targetFramework="net45" />
   <package id="WpfAnimatedGif" version="1.4.13" targetFramework="net45" />
