--- a/CommissionsModule/CommissionsModule.csproj
+++ b/CommissionsModule/CommissionsModule.csproj
@@ -99,6 +99,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\CommissionService.cs" />
     <Compile Include="Services\Interfaces\ICommissionService.cs" />
+    <Compile Include="ViewModels\CommissionJournal\CommissionJournalHeaderViewModel.cs" />
+    <Compile Include="ViewModels\CommissionJournal\CommissionJournalItemViewModel.cs" />
+    <Compile Include="ViewModels\CommissionJournal\CommissionJournalViewModel.cs" />
     <Compile Include="ViewModels\Decisions\CommissionDecisionEditorViewModel.cs" />
     <Compile Include="ViewModels\Decisions\CommissionDecisionHeaderViewModel.cs" />
     <Compile Include="ViewModels\Decisions\CommissionDecisionsViewModel.cs" />
@@ -116,6 +119,12 @@
     <Compile Include="ViewModels\Protocols\CommissionСonductViewModel.cs" />
     <Compile Include="ViewModels\Protocols\EditorCommissionMembersViewModel.cs" />
     <Compile Include="ViewModels\Protocols\PreliminaryProtocolViewModel.cs" />
+    <Compile Include="Views\CommissionJournal\CommissionJournalView.xaml.cs">
+      <DependentUpon>CommissionJournalView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CommissionJournal\CommissionJournalHeaderView.xaml.cs">
+      <DependentUpon>CommissionJournalHeaderView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Decisions\CommissionDecisionEditorView.xaml.cs">
       <DependentUpon>CommissionDecisionEditorView.xaml</DependentUpon>
     </Compile>
@@ -178,6 +187,14 @@
   <ItemGroup />
   <ItemGroup>
     <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\CommissionJournal\CommissionJournalView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\CommissionJournal\CommissionJournalHeaderView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
