Schema changed. Implemented printed documents for commission journal and print methods for other documents

--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -269,6 +269,9 @@
     <Compile Include="PersonTalon.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="PrintedDocument.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Record.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
