--- a/Core.Reports/Core.Reports.csproj
+++ b/Core.Reports/Core.Reports.csproj
@@ -68,9 +68,20 @@
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="Prism, Version=6.1.0.0, Culture=neutral, PublicKeyToken=91a96d2a154366d8, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Prism.Core.6.1.0\lib\net45\Prism.dll</HintPath>
+    </Reference>
+    <Reference Include="Prism.Wpf, Version=6.1.0.0, Culture=neutral, PublicKeyToken=91a96d2a154366d8, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Prism.Wpf.6.1.0\lib\net45\Prism.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -79,9 +90,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\CommissionJournalDTO.cs" />
     <Compile Include="DTO\ReportTemplateDTOInfo.cs" />
     <Compile Include="DTO\ReportTemplateDTO.cs" />
     <Compile Include="CoreReports.cs" />
+    <Compile Include="PrintedDocuments\PrintedDocumentsCollectionViewModel.cs" />
+    <Compile Include="PrintedDocuments\PrintedDocumentViewModel.cs" />
     <Compile Include="ReportGenerators\Implementations\ReportGeneratorHelper.cs" />
     <Compile Include="ReportGenerators\Interfaces\IReportGeneratorHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,7 +105,9 @@
     <Compile Include="ReportData\ReportDataTable.cs" />
     <Compile Include="ReportGenerators\Implementations\DocXReportGenerator.cs" />
     <Compile Include="ReportGenerators\Interfaces\IReportGenerator.cs" />
+    <Compile Include="Services\Implementations\DocumentService.cs" />
     <Compile Include="Services\Implementations\ReportTemplateService.cs" />
+    <Compile Include="Services\Interfaces\IDocumentService.cs" />
     <Compile Include="Services\Interfaces\IReportTemplateService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +127,16 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\PrintedDocumentsCollectionView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
