--- a/Core.Reports/packages.config
+++ b/Core.Reports/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClosedXML" version="0.76.0" targetFramework="net45" />
+  <package id="ClosedXML" version="0.80.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="Prism.Core" version="6.2.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
 </packages>
