--- a/Core.Test/packages.config
+++ b/Core.Test/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
-  <package id="NUnit" version="3.0.1" targetFramework="net45" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="ControlzEx" version="2.1.2.3" targetFramework="net461" />
+  <package id="Fluent.Ribbon" version="4.0.3.394" targetFramework="net45" />
+  <package id="Moq" version="4.5.22" targetFramework="net461" />
+  <package id="NUnit" version="3.4.1" targetFramework="net461" />
 </packages>
