--- a/NotificationServiceConsoleHost/App.config
+++ b/NotificationServiceConsoleHost/App.config
@@ -1,32 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\log.txt" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="5" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
+      <file value="Logs\log.txt"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="5"/>
+      <maximumFileSize value="10MB"/>
+      <staticLogFileName value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %-5level - %message%newline" />
+        <conversionPattern value="%date %-5level - %message%newline"/>
       </layout>
     </appender>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %-5level - %message%newline" />
+        <conversionPattern value="%date %-5level - %message%newline"/>
       </layout>
     </appender>
     <root>
-      <level value="ALL" />
-      <appender-ref ref="RollingFileAppender" />
-      <appender-ref ref="ConsoleAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="RollingFileAppender"/>
+      <appender-ref ref="ConsoleAppender"/>
     </root>
   </log4net>
   <system.serviceModel>
@@ -34,19 +34,17 @@
       <service name="NotificationServiceEngine.NotificationServiceEngine">
         <host>
           <baseAddresses>
-            <add baseAddress = "net.tcp://localhost:8733/NotificationServiceEngine" />
+            <add baseAddress="net.tcp://localhost:8733/NotificationServiceEngine"/>
           </baseAddresses>
         </host>
-        <endpoint address=""
-                  binding="netTcpBinding"
-                  contract="NotificationServiceEngine.INotificationServiceEngine">
+        <endpoint address="" binding="netTcpBinding" contract="NotificationServiceEngine.INotificationServiceEngine">
         </endpoint>
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <serviceDebug includeExceptionDetailInFaults="False" />
+          <serviceDebug includeExceptionDetailInFaults="False"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
