--- a/StatisticsModule/StatisticsModule.csproj
+++ b/StatisticsModule/StatisticsModule.csproj
@@ -164,6 +164,10 @@
       <Project>{ee5f4410-13f6-477f-8ad6-99e848234331}</Project>
       <Name>Shared.DataTemplates</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Shared\Shared.Patient\Shared.Patient.csproj">
+      <Project>{5d4698bd-6256-4bc5-a566-be7cd9a840bb}</Project>
+      <Name>Shared.Patient</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Shell.Shared\Shell.Shared.csproj">
       <Project>{4e0d997f-374e-43be-9617-8da82504b7c8}</Project>
       <Name>Shell.Shared</Name>
